--- a/Index.html
+++ b/Index.html
@@ -4,7 +4,7 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Form Input Wave Animation</title>
+  <title>Minesweeper</title>
   <link rel="stylesheet" href="./start.css">
   <link rel="ico" href="#"/>
 
